Bug #14395: Adding a video to a playlist scrambles the video page
We set min-height: 0; on the blank div so that IE displays the extra padding.

--- a/static/4/css/lights-on.css
+++ b/static/4/css/lights-on.css
@@ -2306,6 +2306,7 @@ margin-bottom:12px;
 
 /* Playlists */
 #playlists {
+    min-height: 0;
     margin-bottom: 20px;
 }
 
